@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sat Feb 22 13:42:26 CET 2014
-buildNumber0=3277
+#Thu Feb 27 11:24:23 CET 2014
+buildNumber0=3279
